<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ba.grbo.doitintime.ui.viewmodels.AddToDoViewModel" />

        <import type="ba.grbo.doitintime.data.source.local.Converters" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_to_do_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AddToDoFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title_hint"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_priority_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/paper_holder"
            app:startIconDrawable="@drawable/ic_assignment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priority_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/priority_hint"
            android:labelFor="@id/priority_dropdown_menu"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/status_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:startIconContentDescription="@string/important_sign"
            app:startIconDrawable="@drawable/ic_priority_generic">

            <AutoCompleteTextView
                android:id="@+id/priority_dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:text="@={Converters.fromPriority(viewModel.priority)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/status_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/status_hint"
            android:labelFor="@id/status_dropdown_menu"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="8"
            app:layout_constraintStart_toEndOf="@+id/priority_layout"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:startIconContentDescription="@string/black_circle"
            app:startIconDrawable="@drawable/ic_status_generic">

            <AutoCompleteTextView
                android:id="@+id/status_dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:text="@={Converters.fromStatus(viewModel.status)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/description_hint"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priority_layout"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:text="@={viewModel.description}"
                app:textInputLayoutFocusedRectEnabled="false" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>