<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="ba.grbo.doitintime.data.Task" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/task_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/task_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <EditText
                android:id="@+id/task_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/roboto"
                android:hint="@string/task"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/priority_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@sample/data.json/tasks/description" />

            <ImageView
                android:id="@+id/priority_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/important_sign"
                app:layout_constraintBottom_toBottomOf="@+id/task_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/status_image"
                app:layout_constraintTop_toTopOf="@+id/task_edit_text"
                tools:src="@sample/data.json/tasks/priority" />

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/circle"
                app:layout_constraintBottom_toBottomOf="@+id/task_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/task_edit_text"
                tools:src="@sample/data.json/tasks/status" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
