<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="info"
            type="ba.grbo.doitintime.data.Info" />

        <variable
            name="warningMessage"
            type="androidx.lifecycle.LiveData&lt;Integer&gt;" />

        <variable
            name="viewsEnabled"
            type="androidx.lifecycle.LiveData&lt;Boolean&gt;" />

        <variable
            name="cursorPosition"
            type="androidx.lifecycle.MutableLiveData&lt;Integer&gt;" />

        <import type="ba.grbo.doitintime.utilities.Converter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_collapsed_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/expand_button_bg"
            android:contentDescription="@string/expand_collapse"
            android:padding="8dp"
            android:src="@drawable/ic_expand"
            app:layout_constraintBottom_toBottomOf="@+id/title_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_layout"
            app:layout_constraintVertical_bias="0.35" />

        <ba.grbo.doitintime.utilities.CustomImageButton
            android:id="@+id/status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@drawable/expand_button_bg"
            android:contentDescription="@string/status_hint"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_layout"
            app:layout_constraintEnd_toStartOf="@+id/expand_button"
            app:layout_constraintTop_toTopOf="@+id/title_layout"
            app:layout_constraintVertical_bias="0.35"
            app:statusImage="@={info.status}" />

        <ba.grbo.doitintime.utilities.CustomImageButton
            android:id="@+id/priority_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@drawable/expand_button_bg"
            android:contentDescription="@string/expand_collapse"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_layout"
            app:layout_constraintEnd_toStartOf="@+id/status_button"
            app:layout_constraintTop_toTopOf="@+id/title_layout"
            app:layout_constraintVertical_bias="0.35"
            app:priorityImage="@{info.priority}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/title_hint"
            app:context="@{context}"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_priority_high"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/priority_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/paper_holder"
            app:startIconDrawable="@drawable/ic_assignment"
            app:warningMessage="@{warningMessage}"
            tools:hint="@sample/data.json/title_info/title_hint">

            <ba.grbo.doitintime.utilities.CustomTextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewsEnabled}"
                android:fontFamily="@font/roboto"
                android:inputType="textMultiLine"
                android:text="@={info.title}"
                android:textSize="16sp"
                tools:text="@sample/data.json/title_info/title" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
